Fix line wrapping for long paragraphs on index page

--- a/assets/css/critical/30-header.css
+++ b/assets/css/critical/30-header.css
@@ -1,7 +1,7 @@
 header {
   display: grid;
   font-family: Alkatra, cursive;
-  font-size: 1.125rem;
+  font-size: 1.75rem;
   grid-template-columns: auto auto 1fr auto;
   grid-template-areas: "heading search nav theme-toggle";
   padding: 0.75rem;
